* UTIL | improve service any usage to 0-65535 from any / dynamic improvements from 1024-65535 to 1025-65535
* UTIL pan-os-php type=device | bugfix for actions=securityprofile-create-alert-only
* class Address/AddressGroup/Service/ServiceGroup/Tag | bugfix if e.g. merger script like to create objects in previous empty ObjectStore

GENERAL:
* update Readme and Install file / bring in information for PAN-OS-PHP on Windows WSLv2 installation


2.0.26 (20211209)
UTILS:
* UTIL pan-os-php type=$utiltype is the only supported UTIL script for the future, all other UTIL script are set to deprecated
* UTIL pan-os-php UI - move to local file usage
* UTIL all script - introduce new argument "shadow-nojson"
* UTIL UI - improvement to get filter correctly working for operators like ">,<,=,!"
* UTIL UI - starting on extended version
* UTIL UI - extend to delete additional actions/filter column
* UTIL develop - add multiple script in specific for downloading PAN-OS software
* UTIL develop | introduce API creation testing script for different objects
* UTIL develop | introduce reset-config and software-remove script
* UTIL develop | software-downloader.php improve exception support
* UTIL introduce new ALIAS: pa_license / pa_software-preparation / pa_software-downloader / pa_config-commit / pa_config-reset / pa_get_system-user-info / pa_software-remove / pa_system-log / pa_traffic-log

BUGFIX:
* UTIL pan-os-php API - bugfix in relation to shadow-json and previous code reduction
* UTIL pa_key-manager | bugfix to add host like license-apikey/bpa-apikey/ldap-password/maxmind-licensekey only once and delete previous available key
* UTIL class UTIL.php | bugfix for adding Audit-Comment
* UTIL pa_key-manager | bugfix to correctly add password/licensekey if used with add=ldap-password/maxmind-licensekey

GENERAL:
* Dockerfiles - extend to different PHP versions
* App-ID version: 8497-7093 update
* framework examples | update 'example-panapiconnector.php'


2.0.25 (20211203)
UTILS: